--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta property="og:title" content="Số Gì Đây phiên quay số lúc 20:00 ngày hôm nay" />
+	<meta property="og:description" content="Bạn tham gia chọn số nhóm cùng mình nhé" />
+	<meta property="og:image" content="https://storage.googleapis.com/shopeevn-general/shopeevn-general/e2beb3258915d83a94d50fc8b9b5393b/group_share_image_landscape_1631502878320514225.png" />
+</head>
+<body>
+
+</body>
+</html>
