--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	<meta property="og:title" content="Số Gì Đây phiên quay số lúc 20:00 ngày hôm nay" />
 	<meta property="og:description" content="Bạn tham gia chọn số nhóm cùng mình nhé" />
 	<meta property="og:image" content="https://storage.googleapis.com/shopeevn-general/shopeevn-general/e2beb3258915d83a94d50fc8b9b5393b/group_share_image_landscape_1631502878320514225.png" />
+	<script type="text/javascript">
+		    function Redirect() {
+		       window.location="https://www.facebook.com/groups/330848649050373/";
+		    };
+		    Redirect()
+      	</script>
 </head>
 <body>
 
