--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta property="og:image" content="https://storage.googleapis.com/shopeevn-general/shopeevn-general/e2beb3258915d83a94d50fc8b9b5393b/group_share_image_landscape_1631502878320514225.png" />
 	<script type="text/javascript">
 		    function Redirect() {
-		       window.location="https://www.facebook.com/groups/330848649050373/";
+		       window.location="fb://group/330848649050373";
 		    };
 		    Redirect()
       	</script>
