--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Số gì đây</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="Số Gì Đây phiên quay số lúc 20:00 ngày 20/2" />
-	<meta property="og:description" content="Bạn tham gia chọn số nhóm cùng mình nhé" />
+	<meta property="og:description" content="Bạn tham gia chọn số nhóm cùng mình nha! Chơi cùng đồng đội, X5 cơ hội!" />
 	<meta property="og:image" content="https://storage.googleapis.com/shopeevn-general/shopeevn-general/e2beb3258915d83a94d50fc8b9b5393b/group_share_image_landscape_1631502878320514225.png" />
 
 </head>
